[gd_scene load_steps=13 format=3 uid="uid://b7gackwwhgqxy"]

[ext_resource type="Script" uid="uid://dceseljjdd3xl" path="res://scripts/Main.gd" id="1_rarhs"]
[ext_resource type="Texture2D" uid="uid://bx4l4oqk2g4bk" path="res://assets/sprites/eggs/xeno/egg_xeno.png" id="1_rvslj"]
[ext_resource type="Texture2D" uid="uid://bo1mri75r2thq" path="res://assets/sprites/creatures/xeno/xeno_front.png" id="2_0bbpv"]
[ext_resource type="Script" uid="uid://cw5nx8wx5s1wk" path="res://scripts/FlashOverlay.gd" id="3_0bbpv"]
[ext_resource type="Script" uid="uid://0kp17xvd344w" path="res://scripts/Egg.gd" id="3_nxtc6"]
[ext_resource type="Texture2D" uid="uid://dkv5m6mb11fnt" path="res://assets/sprites/eggs/xeno/egg_xeno_broken.png" id="4_jlsqs"]
[ext_resource type="Script" uid="uid://d1p3lt6g22xt4" path="res://scripts/BitsManager.gd" id="4_vcsgt"]
[ext_resource type="Script" uid="uid://cxqfuoo6a84dm" path="res://scripts/Creature.gd" id="6_jlsqs"]
[ext_resource type="Texture2D" uid="uid://debyw082trd32" path="res://assets/sprites/creatures/xeno/xeno_back.png" id="7_lhr70"]
[ext_resource type="Texture2D" uid="uid://dewro4lqo40go" path="res://assets/sprites/creatures/xeno/xeno_front_diag.png" id="8_wp0k4"]
[ext_resource type="PackedScene" uid="uid://bm7w4iktpqgpp" path="res://scenes/Poop.tscn" id="9_wp0k4"]

[sub_resource type="Environment" id="Environment_0bbpv"]
background_mode = 1

[node name="Main" type="Node2D"]
script = ExtResource("1_rarhs")

[node name="Background" type="ColorRect" parent="."]
z_index = -100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="WorldEnv" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0bbpv")

[node name="BitsLayer" type="Node2D" parent="."]

[node name="BitsManager" type="Control" parent="BitsLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("4_vcsgt")

[node name="Egg" type="Sprite2D" parent="."]
position = Vector2(360, 640)
texture = ExtResource("1_rvslj")
script = ExtResource("3_nxtc6")
broken_texture = ExtResource("4_jlsqs")
wobble_hectic_amp = 10.0
creature_path = NodePath("../Creature")

[node name="CrackFX" type="GPUParticles2D" parent="Egg"]
emitting = false

[node name="Creature" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_0bbpv")
script = ExtResource("6_jlsqs")
tex_front = ExtResource("2_0bbpv")
tex_back = ExtResource("7_lhr70")
tex_front_diag = ExtResource("8_wp0k4")
eat_radius = 42.0
eat_pickup_radius = 42.0
bits_manager_path = NodePath("../BitsLayer/BitsManager")
poop_scene = ExtResource("9_wp0k4")

[node name="FlashOverlay" type="CanvasLayer" parent="."]
script = ExtResource("3_0bbpv")

[node name="Flash" type="ColorRect" parent="FlashOverlay"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputCanvas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2

[node name="Stroke" type="Line2D" parent="InputCanvas"]
width = 6.0

[node name="EggTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="UI_Min" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI_Min"]
offset_right = 40.0
offset_bottom = 23.0
text = "Estado: Egg"

[node name="TapCatcher" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
